Update form's design.  Fix submit on ie.

--- a/toolkit/toolkit-looknfeel/src/main/less/skins/default/views/analytics/report.less
+++ b/toolkit/toolkit-looknfeel/src/main/less/skins/default/views/analytics/report.less
@@ -137,22 +137,33 @@
 		.report-form {
 			text-align: left;
 		}
-		
-		.formentries .formentry {
-			height: auto;
-			float: left;
-			width: 250px;
-			margin: 5px;
-			&.select .input select{
-				background: none repeat scroll 0 0 transparent;
-				border: 0 none;
-				border-radius: 0 0 0 0;
-				font-family: inherit;
-				font-size: inherit;
-				padding: 4px 5px;
-				width: 120%;
-			}
-		}
+        
+		.formentries {
+            .buttons {
+                width: 100%;
+                text-align: center;
+                .btn {
+                    height: 100%;
+                }
+            }
+            
+            .formentry {
+                height: auto;
+                float: left;
+                width: 250px;
+                margin: 5px;
+                
+                &.select .input select{
+                    background: none repeat scroll 0 0 transparent;
+                    border: 0 none;
+                    border-radius: 0 0 0 0;
+                    font-family: inherit;
+                    font-size: inherit;
+                    padding: 4px 5px;
+                    width: 120%;
+                }
+            }  
+        } 
 	}
 	/////////////////////////////////////////////////////////////////////////////////////////////////
 	// CHARLY REPORT CSS IMPLEMENTATION
@@ -196,7 +207,7 @@
 	.table_report .thead .tr .th_last:before {
 		display: none;
 	}
-	.table_report .thead .tr .th{
+	.table_report .thead .tr .th {
 		border-left: 1px solid #D9D9D9;
 	    content: "";
 	    display: block;
@@ -205,12 +216,20 @@
 	    width: 0;
 	    display: table-cell;
 	    float: none;
-	    font-size: 138.462%;
 	    height: 20px;
-	    padding: 10px 20px;
+	    padding: 5px;
 	    position: relative;
 		text-align: left;
-	} 
+        vertical-align: middle;
+	}
+    
+    .table_report .huge-table-header {
+        font-size: 120%;
+    }
+    
+    .table_report .big-table-header {
+        font-size: 110%;
+    }
 		
 	.table_report .tbody {
 		display: table-row-group;
@@ -228,7 +247,7 @@
 		border: 1px solid #EDEDED;
 	    display: table-cell;
 	    float: none;
-	    padding: 15px 20px;
+	    padding: 5px;
 	    vertical-align: middle;
 	}
 	
